hphp/hack/test/typecheck/constraints/typedef3.php.exp
File "typedef3.php", line 5, characters 34-43:
Some type constraint(s) here are violated (Typing[4110])
File "typedef3.php", line 3, characters 22-22:
'T' is a constrained type
File "typedef3.php", line 3, characters 27-29:
This is a num (int/float)
File "typedef3.php", line 5, characters 45-49:
It is incompatible with a mixed value
