hphp/hack/test/typecheck/constraints/typedef3.php
<?hh

interface Constraint<T as num> {}

newtype NewConstraint as mixed = Constraint<mixed>;
